--- a/MobilePlatformsProjectJS/css/default.css
+++ b/MobilePlatformsProjectJS/css/default.css
@@ -1,2 +1,36 @@
 ﻿body {
+    background-color: powderblue;
+    height: 100%;
+}
+
+#basicListView .win-listview {
+    height: 700px;
+    width: 500px;
+    border: 5px solid gray;
+    min-height: 100%;
+    min-width: 100%;
+    background: red;
+}
+
+#demolistview .win-item {
+    width: 100px;
+    height: 100%;
+    margin: 0 auto;
+}
+
+.dataTemplateContainer {
+    display: -ms-grid;
+    min-height: 100%;
+    -ms-grid-column: auto;
+    -ms-grid-row: auto;
+}
+
+    .dataTemplateContainer .title {
+        -ms-grid-row: 1;
+    }
+
+
+
+.win-type-body h4 {
+    color: #FFFFFF !important;
 }
