--- a/MobilePlatformsProjectJS/css/default.css
+++ b/MobilePlatformsProjectJS/css/default.css
@@ -1,5 +1,5 @@
 ﻿body {
-    background-color: powderblue;
+    background-color: whitesmoke;
     height: 100%;
 }
 
@@ -25,11 +25,9 @@
     -ms-grid-row: auto;
 }
 
-    .dataTemplateContainer .title {
-        -ms-grid-row: 1;
-    }
-
-
+.dataTemplateContainer .title {
+    -ms-grid-row: 1;
+}
 
 .win-type-body h4 {
     color: #FFFFFF !important;
